parser/.antlr/DatalogCPPParser.java
// Generated from /Users/liliang/VSCode/mydatalog/parser/DatalogCPP.g4 by ANTLR 4.9.2



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DatalogCPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TOKEN_EDB=1, TOKEN_IDB=2, TOKEN_RULE=3, TOKEN_INTEGER=4, TOKEN_STRING=5, 
		TOKEN_INT=6, TOKEN_LONG=7, TOKEN_FLOAT=8, TOKEN_DOUBLE=9, TOKEN_VARCHAR=10, 
		TOKEN_CHAR=11, TOKEN_DATE=12, TOKEN_DATETIME=13, TOKEN_MIN=14, TOKEN_MAX=15, 
		TOKEN_SUM=16, TOKEN_COUNT=17, TOKEN_COUNT_DISTINCT=18, TOKEN_ID=19, TOKEN_BODY_HEAD_SEP=20, 
		TOKEN_ANY=21, TOKEN_COMMA=22, TOKEN_SEMICOLON=23, TOKEN_COLON=24, TOKEN_DOT=25, 
		TOKEN_PLUS=26, TOKEN_MINUS=27, TOKEN_MULT=28, TOKEN_DIV=29, TOKEN_NOT=30, 
		TOKEN_NON_DEDUP=31, TOKEN_NON_SET_DIFF=32, TOKEN_DEDUP_ONLY=33, TOKEN_NOT_EQUALS=34, 
		TOKEN_EQUALS=35, TOKEN_GREATER_EQUAL_THAN=36, TOKEN_GREATER_THAN=37, TOKEN_LESS_EQUAL_THAN=38, 
		TOKEN_LESS_THAN=39, TOKEN_LEFT_PAREN=40, TOKEN_RIGHT_PAREN=41, TOKEN_LEFT_BRACKET=42, 
		TOKEN_RIGHT_BRACKET=43, TOKEN_WS=44;
	public static final int
		RULE_datalog_edb_declare = 0, RULE_datalog_idb_declare = 1, RULE_datalog_relation_schema = 2, 
		RULE_datalog_rule_declare = 3, RULE_datalog_program = 4, RULE_datalog_rule = 5, 
		RULE_head = 6, RULE_body = 7, RULE_negation = 8, RULE_atom = 9, RULE_assign = 10, 
		RULE_math_expr = 11, RULE_compare_expr = 12, RULE_aggregation_expr = 13, 
		RULE_attribute = 14, RULE_key_attribute = 15, RULE_non_key_attribute = 16, 
		RULE_compare_op = 17, RULE_aggregation_op = 18, RULE_math_op = 19, RULE_constant = 20, 
		RULE_data_type = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"datalog_edb_declare", "datalog_idb_declare", "datalog_relation_schema", 
			"datalog_rule_declare", "datalog_program", "datalog_rule", "head", "body", 
			"negation", "atom", "assign", "math_expr", "compare_expr", "aggregation_expr", 
			"attribute", "key_attribute", "non_key_attribute", "compare_op", "aggregation_op", 
			"math_op", "constant", "data_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'EDB_DECL'", "'IDB_DECL'", "'RULE_DECL'", null, null, null, null, 
			null, null, null, null, null, null, "'MIN'", "'MAX'", "'SUM'", "'COUNT'", 
			"'COUNT_DISTINCT'", null, "':-'", "'_'", "','", "';'", "':'", "'.'", 
			"'+'", "'-'", "'*'", "'/'", "'!'", "'[!dedup]'", "'[!set-diff]'", "'[dedup-only]'", 
			"'!='", "'='", "'>='", "'>'", "'<='", "'<'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TOKEN_EDB", "TOKEN_IDB", "TOKEN_RULE", "TOKEN_INTEGER", "TOKEN_STRING", 
			"TOKEN_INT", "TOKEN_LONG", "TOKEN_FLOAT", "TOKEN_DOUBLE", "TOKEN_VARCHAR", 
			"TOKEN_CHAR", "TOKEN_DATE", "TOKEN_DATETIME", "TOKEN_MIN", "TOKEN_MAX", 
			"TOKEN_SUM", "TOKEN_COUNT", "TOKEN_COUNT_DISTINCT", "TOKEN_ID", "TOKEN_BODY_HEAD_SEP", 
			"TOKEN_ANY", "TOKEN_COMMA", "TOKEN_SEMICOLON", "TOKEN_COLON", "TOKEN_DOT", 
			"TOKEN_PLUS", "TOKEN_MINUS", "TOKEN_MULT", "TOKEN_DIV", "TOKEN_NOT", 
			"TOKEN_NON_DEDUP", "TOKEN_NON_SET_DIFF", "TOKEN_DEDUP_ONLY", "TOKEN_NOT_EQUALS", 
			"TOKEN_EQUALS", "TOKEN_GREATER_EQUAL_THAN", "TOKEN_GREATER_THAN", "TOKEN_LESS_EQUAL_THAN", 
			"TOKEN_LESS_THAN", "TOKEN_LEFT_PAREN", "TOKEN_RIGHT_PAREN", "TOKEN_LEFT_BRACKET", 
			"TOKEN_RIGHT_BRACKET", "TOKEN_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DatalogCPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DatalogCPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Datalog_edb_declareContext extends ParserRuleContext {
		public vector<shared_ptr<Schema>> r;
		public Datalog_relation_schemaContext schema1;
		public Datalog_relation_schemaContext schema2;
		public TerminalNode TOKEN_EDB() { return getToken(DatalogCPPParser.TOKEN_EDB, 0); }
		public TerminalNode TOKEN_COLON() { return getToken(DatalogCPPParser.TOKEN_COLON, 0); }
		public List<Datalog_relation_schemaContext> datalog_relation_schema() {
			return getRuleContexts(Datalog_relation_schemaContext.class);
		}
		public Datalog_relation_schemaContext datalog_relation_schema(int i) {
			return getRuleContext(Datalog_relation_schemaContext.class,i);
		}
		public Datalog_edb_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_edb_declare; }
	}

	public final Datalog_edb_declareContext datalog_edb_declare() throws RecognitionException {
		Datalog_edb_declareContext _localctx = new Datalog_edb_declareContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_datalog_edb_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			vector<shared_ptr<Schema>> edb_list;
			setState(45);
			match(TOKEN_EDB);
			setState(46);
			match(TOKEN_COLON);
			setState(47);
			((Datalog_edb_declareContext)_localctx).schema1 = datalog_relation_schema();
			edb_list.emplace_back(((Datalog_edb_declareContext)_localctx).schema1.r);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_ID) {
				{
				{
				setState(49);
				((Datalog_edb_declareContext)_localctx).schema2 = datalog_relation_schema();
				edb_list.emplace_back(((Datalog_edb_declareContext)_localctx).schema2.r);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((Datalog_edb_declareContext)_localctx).r =  edb_list;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Datalog_idb_declareContext extends ParserRuleContext {
		public vector<shared_ptr<Schema>> r;
		public Datalog_relation_schemaContext schema1;
		public Datalog_relation_schemaContext schema2;
		public TerminalNode TOKEN_IDB() { return getToken(DatalogCPPParser.TOKEN_IDB, 0); }
		public TerminalNode TOKEN_COLON() { return getToken(DatalogCPPParser.TOKEN_COLON, 0); }
		public List<Datalog_relation_schemaContext> datalog_relation_schema() {
			return getRuleContexts(Datalog_relation_schemaContext.class);
		}
		public Datalog_relation_schemaContext datalog_relation_schema(int i) {
			return getRuleContext(Datalog_relation_schemaContext.class,i);
		}
		public Datalog_idb_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_idb_declare; }
	}

	public final Datalog_idb_declareContext datalog_idb_declare() throws RecognitionException {
		Datalog_idb_declareContext _localctx = new Datalog_idb_declareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_datalog_idb_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			vector<shared_ptr<Schema>> idb_list;
			setState(60);
			match(TOKEN_IDB);
			setState(61);
			match(TOKEN_COLON);
			setState(62);
			((Datalog_idb_declareContext)_localctx).schema1 = datalog_relation_schema();
			idb_list.emplace_back(((Datalog_idb_declareContext)_localctx).schema1.r);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_ID) {
				{
				{
				setState(64);
				((Datalog_idb_declareContext)_localctx).schema2 = datalog_relation_schema();
				idb_list.emplace_back(((Datalog_idb_declareContext)_localctx).schema2.r);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((Datalog_idb_declareContext)_localctx).r =  idb_list;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Datalog_relation_schemaContext extends ParserRuleContext {
		public shared_ptr<Schema> r;
		public Token relation_name;
		public AttributeContext t1;
		public AttributeContext t2;
		public TerminalNode TOKEN_LEFT_PAREN() { return getToken(DatalogCPPParser.TOKEN_LEFT_PAREN, 0); }
		public TerminalNode TOKEN_RIGHT_PAREN() { return getToken(DatalogCPPParser.TOKEN_RIGHT_PAREN, 0); }
		public TerminalNode TOKEN_ID() { return getToken(DatalogCPPParser.TOKEN_ID, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> TOKEN_COMMA() { return getTokens(DatalogCPPParser.TOKEN_COMMA); }
		public TerminalNode TOKEN_COMMA(int i) {
			return getToken(DatalogCPPParser.TOKEN_COMMA, i);
		}
		public Datalog_relation_schemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_relation_schema; }
	}

	public final Datalog_relation_schemaContext datalog_relation_schema() throws RecognitionException {
		Datalog_relation_schemaContext _localctx = new Datalog_relation_schemaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_datalog_relation_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			shared_ptr<Schema> schema = make_shared<Schema>();
			setState(75);
			((Datalog_relation_schemaContext)_localctx).relation_name = match(TOKEN_ID);
			schema->name = (((Datalog_relation_schemaContext)_localctx).relation_name!=null?((Datalog_relation_schemaContext)_localctx).relation_name.getText():null);
			setState(77);
			match(TOKEN_LEFT_PAREN);
			setState(78);
			((Datalog_relation_schemaContext)_localctx).t1 = attribute();
			schema->attributes.emplace_back(make_shared<AtomArg>(((Datalog_relation_schemaContext)_localctx).t1.r->name, ((Datalog_relation_schemaContext)_localctx).t1.r->type, ((Datalog_relation_schemaContext)_localctx).t1.r->isKey));
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_COMMA) {
				{
				{
				setState(80);
				match(TOKEN_COMMA);
				setState(81);
				((Datalog_relation_schemaContext)_localctx).t2 = attribute();
				schema->attributes.emplace_back(make_shared<AtomArg>(((Datalog_relation_schemaContext)_localctx).t2.r->name, ((Datalog_relation_schemaContext)_localctx).t2.r->type, ((Datalog_relation_schemaContext)_localctx).t2.r->isKey));
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(TOKEN_RIGHT_PAREN);
			((Datalog_relation_schemaContext)_localctx).r =  schema;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Datalog_rule_declareContext extends ParserRuleContext {
		public vector<shared_ptr<RuleMap>> r;
		public Datalog_programContext dp;
		public TerminalNode TOKEN_RULE() { return getToken(DatalogCPPParser.TOKEN_RULE, 0); }
		public TerminalNode TOKEN_COLON() { return getToken(DatalogCPPParser.TOKEN_COLON, 0); }
		public TerminalNode EOF() { return getToken(DatalogCPPParser.EOF, 0); }
		public Datalog_programContext datalog_program() {
			return getRuleContext(Datalog_programContext.class,0);
		}
		public Datalog_rule_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_rule_declare; }
	}

	public final Datalog_rule_declareContext datalog_rule_declare() throws RecognitionException {
		Datalog_rule_declareContext _localctx = new Datalog_rule_declareContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_datalog_rule_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(TOKEN_RULE);
			setState(93);
			match(TOKEN_COLON);
			setState(94);
			((Datalog_rule_declareContext)_localctx).dp = datalog_program();
			((Datalog_rule_declareContext)_localctx).r =  ((Datalog_rule_declareContext)_localctx).dp.r;
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Datalog_programContext extends ParserRuleContext {
		public vector<shared_ptr<RuleMap>> r;
		public Datalog_ruleContext r1;
		public Datalog_ruleContext r2;
		public List<Datalog_ruleContext> datalog_rule() {
			return getRuleContexts(Datalog_ruleContext.class);
		}
		public Datalog_ruleContext datalog_rule(int i) {
			return getRuleContext(Datalog_ruleContext.class,i);
		}
		public Datalog_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_program; }
	}

	public final Datalog_programContext datalog_program() throws RecognitionException {
		Datalog_programContext _localctx = new Datalog_programContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_datalog_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			vector<shared_ptr<RuleMap>> rule_list;
			setState(99);
			((Datalog_programContext)_localctx).r1 = datalog_rule();
			rule_list.emplace_back(((Datalog_programContext)_localctx).r1.r);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TOKEN_ID) | (1L << TOKEN_NON_DEDUP) | (1L << TOKEN_NON_SET_DIFF) | (1L << TOKEN_DEDUP_ONLY))) != 0)) {
				{
				{
				setState(101);
				((Datalog_programContext)_localctx).r2 = datalog_rule();
				rule_list.emplace_back(((Datalog_programContext)_localctx).r2.r);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((Datalog_programContext)_localctx).r =  rule_list;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Datalog_ruleContext extends ParserRuleContext {
		public shared_ptr<RuleMap> r;
		public HeadContext h;
		public BodyContext b;
		public TerminalNode TOKEN_BODY_HEAD_SEP() { return getToken(DatalogCPPParser.TOKEN_BODY_HEAD_SEP, 0); }
		public TerminalNode TOKEN_DOT() { return getToken(DatalogCPPParser.TOKEN_DOT, 0); }
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public TerminalNode TOKEN_NON_DEDUP() { return getToken(DatalogCPPParser.TOKEN_NON_DEDUP, 0); }
		public TerminalNode TOKEN_NON_SET_DIFF() { return getToken(DatalogCPPParser.TOKEN_NON_SET_DIFF, 0); }
		public TerminalNode TOKEN_DEDUP_ONLY() { return getToken(DatalogCPPParser.TOKEN_DEDUP_ONLY, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Datalog_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datalog_rule; }
	}

	public final Datalog_ruleContext datalog_rule() throws RecognitionException {
		Datalog_ruleContext _localctx = new Datalog_ruleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_datalog_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			shared_ptr<RuleMap> rule_map = make_shared<RuleMap>();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_NON_DEDUP) {
				{
				setState(112);
				match(TOKEN_NON_DEDUP);
				rule_map->nonDedup = true;
				}
			}

			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_NON_SET_DIFF) {
				{
				setState(116);
				match(TOKEN_NON_SET_DIFF);
				rule_map->nonSetDiff = true;
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_DEDUP_ONLY) {
				{
				setState(120);
				match(TOKEN_DEDUP_ONLY);
				rule_map->dedupOnly = true;
				}
			}
